--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "zf-metal/log",
     "description": "Modulo de logs para Zend Framework 3",
     "type": "library",
-    "license": "BSD-3-Clause",
-    "version": "0.0.2",
+    "license": "MIT",
+    "version": "1.0.0",
     "homepage": "https://github.com/cincarnato",
     "keywords": [
         "zf3"
@@ -25,7 +25,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6",
-        "zendframework/zend-log": "^2.9"
+        "zendframework/zend-log": "^2.9.2"
     },
     "autoload": {
         "psr-4": {
