--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Modulo de logs para Zend Framework 3",
     "type": "library",
     "license": "MIT",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "homepage": "https://github.com/cincarnato",
     "keywords": [
         "zf3"
@@ -25,7 +25,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6",
-        "zendframework/zend-log": "^2.9.2"
+        "zendframework/zend-log": "^2.9.2",
+        "zf-metal/commons": "^1.3.7"
     },
     "autoload": {
         "psr-4": {
